# G15_ms-documento

./: .gitignore  Dockerfile  Dockerfile.unknown  README.md  app.py  division_tareas.txt  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: k6-test.yml
app/: __init__.py  exceptions.py  task.py
app/config/: config.py
app/mapping/: __init__.py  alumno_mapping.py  especialidad_mapping.py  tipodocumento_mapping.py
app/models/: __init__.py  alumno.py  especialidad.py  tipodocumento.py
app/resources/: __init__.py  certificado_resource.py  ficha_alumno_resource.py  home.py
app/services/: __init__.py  alumno_service.py  certificate_service.py  controlador_service.py  documento_service.py  documentos_office_service.py  orquestador_service.py  redis_service.py
app/template/ficha_alumno/: ficha_alumno.html
app/validators/: __init__.py  alumno_validator.py  especialidad_validator.py  tipo_documento_validator.py
k6/: docker-compose.k6.yml  run-test.sh
k6/scripts/: documento-load-test.js  ficha-alumno-test.js
redis/: docker-compose.yml
redis/data/: redis.conf
test/: conftest.py  test_routes.py  test_service.py
traefik/: .env.traefik  README.md  start-traefik.sh  traefik.yml
traefik/config/: middlewares.yml  routers.yml  security.yml  tls.yml
