[project]
name = "ms-documento"
version = "0.1.0"
description = "Microservicio para generación de documentos - Grupo 15"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docxtpl==0.20.0",
    "flask==3.1.2",
    "flask-restful>=0.3.10",
    "granian>=2.6.0",
    "marshmallow==4.0.1",
    "pyrefly==0.38.2",
    "python-dotenv==1.1.1",
    "python-odt-template==0.5.1",
    "requests==2.32.5",
    "weasyprint==65.1",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]
